posts: fix wrapping of long tags on post versions page.
ref: https://danbooru.donmai.us/forum_topics/32364

--- a/app/components/tag_list_component/tag_list_component.html.scss
+++ b/app/components/tag_list_component/tag_list_component.html.scss
@@ -1,6 +1,6 @@
 .tag-list {
   a.search-tag {
-    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
   }
 
   &.inline-tag-list {
