--- a/app/javascript/src/styles/specific/posts.scss
+++ b/app/javascript/src/styles/specific/posts.scss
@@ -199,11 +199,3 @@ body.mode-translation .note-container {
 body:not(.mode-translation) div#c-posts div#a-show #mark-as-translated-section {
   display: none;
 }
-
-div#c-post-versions, div#c-artist-versions {
-  div#a-index {
-    a {
-      word-wrap: break-word;
-    }
-  }
-}
